LIBITD-294. Prepare Wufoo Connector 1.0 release documentation
Updated documentation for Wufoo Connector.

https://issues.umd.edu/browse/LIBITD-294